Fixed header z-index fix

--- a/Website/frontend/assets/css/_sass/partials/_header.scss
+++ b/Website/frontend/assets/css/_sass/partials/_header.scss
@@ -101,6 +101,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
+		z-index: 100;
 		> .wrapper {
 			background-color: #fff;
 			@include retina-background("header-mobile.png");
